[metadata]
name = linesieve
version = attr: linesieve.__version__
author = lemon24
description = An unholy blend of grep, sed, and awk, kinda.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lemon24/linesieve
license = BSD-3-Clause
project_urls =
    Code = https://github.com/lemon24/linesieve
    Issue tracker = https://github.com/lemon24/linesieve/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: Log Analysis
    Topic :: System :: Shells
    Topic :: System :: Systems Administration
    Topic :: Text Processing
    Topic :: Text Processing :: Filters
    Topic :: Utilities

keywords = grep, sed, awk, cli, command-line, terminal, text, text processing, search, replace, regex

[options]
packages = linesieve
package_dir = = src
python_requires = >=3.9

install_requires =
    click >= 8

[options.extras_require]

tests =
    pytest

dev =
    pre-commit
    build
    twine

